--- a/demo/package.json
+++ b/demo/package.json
@@ -13,12 +13,16 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@headlessui/react": "^1.4.3",
+    "@heroicons/react": "^1.0.5",
     "classnames": "^2.2.6",
-    "gatsby": "^2.19.17",
-    "gatsby-plugin-purgecss": "^4.0.1",
+    "gatsby": "^4.5.4",
+    "gatsby-plugin-postcss": "^5.5.0",
+    "gatsby-plugin-purgecss": "^6.1.0",
     "gatsby-theme-tailwindcss": "*",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {}
 }
