--- a/theme/package.json
+++ b/theme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@renejam/gatsby-theme-tailwindcss",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "main": "index.js",
   "license": "MIT",
   "author": "René Sauvé <rene@jambaree.com>",
@@ -27,6 +27,7 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@tailwindcss/forms": "^0.4.0",
     "gatsby-plugin-emotion": "^7.5.0",
     "gatsby-plugin-postcss": "^5.5.0",
     "tailwindcss": "^3.0.15"
