--- a/demo/package.json
+++ b/demo/package.json
@@ -16,11 +16,11 @@
     "@emotion/react": "^11.7.1",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
+    "@jambaree/gatsby-theme-tailwindcss": "*",
     "classnames": "^2.2.6",
     "gatsby": "^4.5.4",
     "gatsby-plugin-postcss": "^5.5.0",
     "gatsby-plugin-purgecss": "^6.1.0",
-    "gatsby-theme-tailwindcss": "*",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
