--- a/theme/package.json
+++ b/theme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jambaree/gatsby-theme-tailwindcss",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "main": "index.js",
   "license": "MIT",
   "author": "René Sauvé <rene@jambaree.com>",
@@ -27,11 +27,13 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@headlessui/react": "^1.4.3",
+    "@heroicons/react": "^1.0.5",
     "gatsby-plugin-emotion": "^7.5.0",
     "gatsby-plugin-postcss": "^5.5.0",
     "tailwindcss": "^3.0.15"
   },
-  "description": "Gatsby Tailwind Theme>",
+  "description": "Gatsby Tailwind Theme",
   "bugs": {
     "url": "https://github.com/jambaree/gatsby-theme-tailwindcss/issues"
   },
