--- a/theme/package.json
+++ b/theme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jambaree/gatsby-theme-tailwindcss",
-  "version": "2.1.4",
+  "version": "2.1.6",
   "main": "index.js",
   "license": "MIT",
   "author": "René Sauvé <rene@jambaree.com>",
@@ -15,21 +15,22 @@
   ],
   "devDependencies": {
     "gatsby": "^4.5.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.0.0-rc.0-next-fe905f152-20220107",
+    "react-dom": "^18.0.0-rc.0-next-fe905f152-20220107"
   },
   "peerDependencies": {
     "gatsby": "^4.5.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.0.0-rc.0-next-fe905f152-20220107",
+    "react-dom": "^18.0.0-rc.0-next-fe905f152-20220107"
   },
   "dependencies": {
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@tailwindcss/typography": "^0.5.1",
     "gatsby-plugin-emotion": "^7.5.0",
     "gatsby-plugin-postcss": "^5.5.0",
-    "tailwindcss": "^3.0.15"
+    "tailwindcss": "^3.0.21"
   },
   "description": "Gatsby Tailwind Theme",
   "bugs": {
