--- a/theme/package.json
+++ b/theme/package.json
@@ -30,7 +30,7 @@
     "@tailwindcss/typography": "^0.5.1",
     "gatsby-plugin-emotion": "^7.5.0",
     "tailwindcss": "^3.0.21",
-    "gatsby-plugin-postcss": "^5.9.0",
+    "gatsby-plugin-postcss": "^5.9.0"
   },
   "description": "Gatsby Tailwind Theme",
   "bugs": {
